# ai

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README(Rendu tests).txt  README.md  Rendu2.md  cnn.md  model.json  weights.txt
.cargo/: config.toml
.github/workflows/: build_test.yml
python/: app.py  cnn.py  data_processing.py  linear_regression.py  mlp.py  naive-rbf.py  naive_rbf.ipynb  naive_rbf.py  perceptron.py  rbf.ipynb  rbf.py  test-cases.py  test_cases.ipynb  test_cases.py  util.py
src/: activation.rs  batchnorm.rs  cnn.rs  cnn_interop.rs  conv2d.rs  data.rs  data_processing.rs  dense.rs  fit.rs  layer.rs  lib.rs  linear_regression.rs  loss.rs  maxpool2d.rs  mlp.py  mlp.rs  mod.rs  model.rs  naive_rbf.rs  neuron.rs  optimizer.rs  perceptron.py  perceptron.rs  rbf.rs  tensor.rs  util.rs  utils.rs  weights_init.rs
src/cnn/: activation.rs  conv.rs  conv2d.rs  data.rs  dense.rs  layer.rs  maxpool2d.rs  mod.rs  model.rs  mxpl.rs  optimizer.rs  util.rs  weights_init.rs
tests/: activation.rs  cnn.rs  data_processing.rs  layer.rs  loss.rs  model.rs  naive_rbf.rs  neuron.rs  new_cnn.rs  optimizer.rs  rbf.rs  tensor.rs  util.rs  utils.rs
