[package]
name = "ai"
version = "0.5.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
rand = "0.8.5"
image = "0.25.1"
nalgebra = "0.33.0"
libc = "0.2.155"
rand_distr = "0.4.3"
ndarray = { version = "0.15", features = ["blas", "rayon"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
approx = "0.5.1"
ndarray-rand = "0.14.0"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
env_logger = "0.11.3"
indicatif = "0.17.8"
rust-mnist = "0.2.0"

[profile.test]
opt-level = 3
