[package]
name = "ai"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
rand = "0.8.5"
image = "0.25.1"
nalgebra = "0.33.0"
libc = "0.2.155"
rand_distr = "0.4.3"
ndarray = { version = "0.15", features = ["rayon", "serde"] }
approx = "0.5.1"
ndarray-rand = "0.14.0"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.8"
rust-mnist = "0.2.0"
itertools = "0.13.0"
typetag = "0.2.16"

[profile.test]
opt-level = 3
